# systemprompt-core

./: .gitignore  AGENTS.md  BUG_REPORT_LOCAL_SESSION_USER_PROVISIONING.md  BUG_REPORT_MIGRATION_READ_REPLICA.md  CHANGELOG.md  CLAUDE.md  CLI_FRICTION_PLAN.md  Cargo.toml  LICENSE  README.md  SECURITY.md  claude.md  cli-secrets.md  cli-session-switch-friction.md  clippy.toml  codecov.yml  cowork-tracing.md  deny.toml  hooks.md  issues.md  justfile  mcp.md  oauth.md  plan.md  response.txt  rustfmt.toml  secret-rotation.md  sweep.timestamp  youtube-walkthrough.md
crates/app/generator/: CHANGELOG.md  Cargo.toml  README.md  status.md
crates/app/generator/src/: api.rs  assets.rs  error.rs  lib.rs
crates/app/generator/tests/: asset_tests.rs  build_tests.rs  markdown_tests.rs  prerender_tests.rs  sitemap_tests.rs  template_tests.rs
crates/app/runtime/: CHANGELOG.md  Cargo.toml  README.md  status.md
crates/app/runtime/src/: builder.rs  context.rs  context_loaders.rs  context_traits.rs  database_context.rs  error.rs  installation.rs  lib.rs  registry.rs  span.rs  startup_validation.rs  validation.rs  wellknown.rs
crates/app/scheduler/: CHANGELOG.md  Cargo.toml  README.md  status.md
crates/app/scheduler/.sqlx/: query-13d103ca7b24d4f7a7f33c88067cecde21156d594243c0dfcdfd35e17272a6c3.json  query-2de4449be55e5467d25b428caf747a73b622579c684f56dfb18bb65d874967f5.json  query-4b00a5bcbca7df3f744065d1ac444fa09d295685fc722017ce3934ce3463946d.json  query-4ed187bc690c1603369c290a6c6a9eba4da5df76e2f3df7e49b212970c268233.json  query-880e9331fb088bf869548d89adc48d2d653dff77fe948524a9b4af90d6195193.json  query-d359b413276b20ed5d3870a95c9cdb870a27e9bff47ff332a2fb863914ebd34a.json  query-e1e611057fc6eeedc00739d64c5263057bdae92435042c6d2b61117052cfc17a.json  query-e9bc9f581ec7a65589de5f7245e11c8ee15d4154471c2f24e18a8e5f310cf906.json  query-ed0aec40004cd1f7eb8ba49ef66eb456d916f1a75fc37886bde11c1e5dc56768.json  query-f170b10e9a8ced23441e2d996e1aee1e1a33c5553f783eaa2f16d8650e03ae2c.json  query-ff73167ee555145c639503cabbdcb8f1bee562cc75f78ae5936688b59df473c2.json
crates/app/scheduler/schema/: conversation_evaluations.sql  scheduled_jobs.sql
crates/app/scheduler/src/: error.rs  extension.rs  lib.rs
crates/app/scheduler/tests/: unit_tests.rs
crates/app/sync/: CHANGELOG.md  Cargo.toml  README.md  status.md
crates/app/sync/src/: api_client.rs  config.rs  crate_deploy.rs  database.rs  error.rs  file_bundler.rs  files.rs  lib.rs  result.rs
crates/domain/agent/: CHANGELOG.md  Cargo.toml  README.md  module.yaml  status.md
crates/domain/agent/.sqlx/: query-2e48ac01d9d14e790a2eef2e06c547d881c65d14e48b9af0ff02694276b5d208.json  query-313568ae14f2ccfc770124d4064e6d03f5f86b15007d71bf5c94f612448780bb.json  query-34082504e31ed78203875ad8cc0d1d364198d44a4b5aa3074b887f24aec3e288.json  query-3632570020be35b980e8d9ab463ef104906fbb78a978f4d5ab1ea531b2b9ef6c.json  query-49db0a9c8f3c8ca66bd4b1b401da8bfc09da4f95690d103ed4ddd8dd1fe2a2fd.json  query-9d6a4d52453c2ac36327c4ea6053d2ca755f9389bf7b97c805d2ce5e1279685f.json  query-9f232d803cebd46cb7a45877d4fb397c90db28061c798f5da08c221cb3cdbbdf.json  query-ae4387f9f552528c44aebd0d0e7beb2a4ba62f1233b57eefe416b6bb11eb9c21.json  query-c6a167ec43234801fb72773306083fe07886c87171864245a938b914c3c37a29.json  query-ca02b77d3a66bf5d8f98bd662b7e663c1cc1344a67d3c0cf2b6247a2fed169c0.json  query-ee3db18cd8b792bfda1282adb3b3f5c4c9342f2f13754992a20a2b892734991f.json
crates/domain/agent/schema/: README.md  agent_playbooks.sql  agent_skills.sql  agent_tasks.sql  agents.sql  artifact_parts.sql  context_agents.sql  context_notifications.sql  message_parts.sql  services.sql  task_artifacts.sql  task_execution_steps.sql  task_messages.sql  task_push_notification_configs.sql  user_contexts.sql  (+1 more)
crates/domain/ai/: CHANGELOG.md  Cargo.toml  README.md  module.yaml  status.md
crates/domain/analytics/: CHANGELOG.md  Cargo.toml  README.md  module.yaml  status.md
crates/domain/content/: CHANGELOG.md  Cargo.toml  README.md  module.yaml  status.md
crates/domain/files/: CHANGELOG.md  Cargo.toml  README.md  module.yaml  status.md
crates/domain/marketplace/: CHANGELOG.md  Cargo.toml  README.md
crates/domain/mcp/: CHANGELOG.md  Cargo.toml  README.md  status.md
crates/domain/oauth/: CHANGELOG.md  Cargo.toml  README.md  module.yaml  status.md
crates/domain/slack/: CHANGELOG.md  Cargo.toml  README.md
crates/domain/teams/: CHANGELOG.md  Cargo.toml  README.md
crates/domain/templates/: CHANGELOG.md  Cargo.toml  README.md  status.md
crates/domain/users/: CHANGELOG.md  Cargo.toml  README.md  module.yaml  status.md
crates/entry/api/: CHANGELOG.md  Cargo.toml  README.md  module.yaml  status.md
crates/entry/cli/: CHANGELOG.md  Cargo.toml  README.md  cli-testing-instructions.md  status.md  validation.md
crates/entry/tui/: Cargo.toml  README.md  status.md
crates/infra/cloud/: CHANGELOG.md  Cargo.toml  README.md  status.md
crates/infra/config/: CHANGELOG.md  Cargo.toml  README.md  status.md
crates/infra/database/: CHANGELOG.md  Cargo.toml  README.md  module.yaml  status.md
crates/infra/events/: CHANGELOG.md  Cargo.toml  README.md  status.md
crates/infra/loader/: CHANGELOG.md  Cargo.toml  README.md  status.md
crates/infra/logging/: CHANGELOG.md  Cargo.toml  README.md  status.md
crates/infra/security/: CHANGELOG.md  Cargo.toml  README.md  build.rs  status.md
crates/shared/client/: CHANGELOG.md  Cargo.toml  README.md  status.md
crates/tests/: Cargo.toml
crates/tests/.cargo/: config.toml
crates/tests/.config/: nextest.toml
crates/tests/bench/: Cargo.toml
crates/tests/concurrency/: Cargo.toml
crates/tests/contract/: Cargo.toml
crates/tests/fuzz/: Cargo.toml
crates/tests/integration/: README.md  a2a_integration_tests.rs  lib.rs  mod.rs  package.json  phase_1_security.rs
crates/tests/loadtest/: Cargo.toml
crates/tests/mock-inference/: Cargo.toml
crates/tests/property/: Cargo.toml
systemprompt/: CHANGELOG.md  Cargo.toml  README.md
systemprompt/examples/: api.rs  cli.rs  database.rs  extension.rs
systemprompt/src/: lib.rs  prelude.rs  runtime.rs
(+6439 files in other folders)
