[workspace]
members = [
    # Shared layer
    "crates/shared/provider-contracts",
    "crates/shared/traits",
    "crates/shared/models",
    "crates/shared/client",
    "crates/shared/identifiers",
    "crates/shared/extension",
    "crates/shared/template-provider",
    # Infrastructure layer
    "crates/infra/database",
    "crates/infra/logging",
    "crates/infra/config",
    "crates/infra/events",
    "crates/infra/security",
    "crates/infra/cloud",
    "crates/infra/loader",
    # Domain layer
    "crates/domain/users",
    "crates/domain/oauth",
    "crates/domain/files",
    "crates/domain/analytics",
    "crates/domain/content",
    "crates/domain/mcp",
    "crates/domain/ai",
    "crates/domain/agent",
    "crates/domain/templates",
    # Application layer
    "crates/app/runtime",
    "crates/app/scheduler",
    "crates/app/generator",
    "crates/app/sync",
    # Entry layer
    "crates/entry/api",
    "crates/entry/cli",
    # Main library crate (for crates.io)
    "systemprompt",
]

# Test crates are excluded from the workspace so they don't compile
# when systemprompt-core is used as a git dependency.
# Run tests with: cargo test --manifest-path crates/tests/Cargo.toml
exclude = [
    "crates/tests",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Edward Burton"]
license = "FSL-1.1-ALv2"
version = "0.0.1"
repository = "https://github.com/systempromptio/systemprompt-core"
homepage = "https://systemprompt.io"
documentation = "https://docs.systemprompt.io"
keywords = ["ai", "agents", "mcp", "llm", "orchestration"]
categories = ["api-bindings", "development-tools"]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
return_self_not_must_use = "allow"
must_use_candidate = "allow"
trivially_copy_pass_by_ref = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
format_push_string = "allow"
uninlined_format_args = "allow"
result_unit_err = "allow"
perf = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }
missing_docs_in_private_items = "allow"
too_many_arguments = "deny"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
derive_partial_eq_without_eq = "allow"
cognitive_complexity = "deny"
type_complexity = "warn"
too_many_lines = "warn"
expect_used = "warn"
unwrap_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
inefficient_to_string = "warn"
unnecessary_wraps = "warn"
unused_async = "warn"

# Project standards: never use unwrap_or_default() - fail explicitly
unwrap_or_default = "allow"

# Code clarity
if_not_else = "warn"
redundant_else = "warn"
manual_let_else = "warn"
match_bool = "warn"
option_if_let_else = "warn"
needless_pass_by_value = "warn"
items_after_statements = "warn"
semicolon_if_nothing_returned = "warn"

# Performance
or_fun_call = "warn"
redundant_clone = "warn"
unnecessary_to_owned = "warn"
implicit_clone = "warn"
large_futures = "warn"

# Error handling
match_wild_err_arm = "warn"

# Restriction (stricter quality)
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
exit = "deny"
rc_mutex = "deny"
empty_structs_with_brackets = "warn"
rest_pat_in_fully_bound_structs = "warn"
# string_to_string removed - covered by implicit_clone
clone_on_ref_ptr = "warn"
separated_literal_suffix = "warn"
try_err = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.47", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros", "fs", "process", "signal"] }
tokio-test = "0.4"
axum-test = "15.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "rust_decimal"] }
rust_decimal = "1.37"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }
regex = "1.11"
indexmap = { version = "2.0", features = ["serde"] }

# HTTP/API (for API crate)
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
http = "1.0"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tower = { version = "0.5", features = ["util"] }
tower_governor = { version = "0.8", default-features = false, features = ["axum"] }
governor = "0.10"

# CLI (for system crate)
clap = { version = "4.4", features = ["derive", "env"] }
console = "0.16"
dialoguer = "0.12"
tabled = "0.20"
indicatif = "0.18"
atty = "0.2"
dirs = "5"
open = "5"
toml = "0.8"

# Process management (for services)
nix = { version = "0.30", features = ["process", "signal"] }
ctrlc = "3.0"


# Utilities
inventory = "0.3"
dotenvy = "0.15"
tempfile = "3.0"
walkdir = "2.0"
flate2 = "1.0"
tar = "0.4"
tokio-cron-scheduler = "0.15"
maxminddb = "0.24"

# Additional utilities
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
bytes = "1.0"
hex = "0.4"
serde_urlencoded = "0.7"
colored = "2.2"
schemars = { version = "1.0", features = ["derive"] }
once_cell = "1.21"
url = "2.5"
urlencoding = "2.1"
semver = { version = "1.0", features = ["serde"] }
async-stream = "0.3"
reqwest-eventsource = "0.6"
wiremock = "0.6"

# Markdown and templating
comrak = { version = "0.49", default-features = false }
handlebars = "6"
pulldown-cmark = "0.13"

# MCP additional dependencies
sse-stream = "0.2.1"
rmcp = { version = "0.12.0", features = ["server", "client", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "macros", "auth"] }
rmcp-macros = "0.12"

# Security
rand = "0.9"
bcrypt = "0.18"
base64 = "0.22"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
sha2 = "0.10"
oauth2 = "5.0"
md5 = "0.7"
hmac = "0.12"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }


[profile.release]
# Use thin LTO instead of full LTO to preserve inventory crate registrations.
# Full LTO can strip the static initializers used by inventory::submit!, causing
# ExtensionRegistry::discover() to return empty results.
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
debug-assertions = false
overflow-checks = false
