[package]
name = "systemprompt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "systemprompt.io - Extensible AI agent orchestration framework"
keywords = ["ai", "agents", "mcp", "llm", "orchestration"]
categories = ["api-bindings", "development-tools"]
repository = "https://github.com/systempromptio/systemprompt-core"
homepage = "https://systemprompt.io"
documentation = "https://docs.systemprompt.io"
readme = "../README.md"

[lints]
workspace = true

[features]
default = ["core"]

# Core functionality - traits, models, extension framework
core = [
    "dep:systemprompt-traits",
    "dep:systemprompt-models",
    "dep:systemprompt-identifiers",
    "dep:systemprompt-extension",
    "dep:systemprompt-template-provider",
]

# Database support
database = ["dep:systemprompt-database", "dep:sqlx"]

# MCP support (uses rmcp-macros from rmcp crate)
mcp = ["dep:rmcp"]

# API server functionality
api = [
    "core",
    "database",
    "dep:systemprompt-api",
    "dep:systemprompt-runtime",
    "dep:axum",
]

# Sync functionality for cloud synchronization
sync = ["dep:systemprompt-sync"]

# Cloud infrastructure (API client, credentials, OAuth)
cloud = ["dep:systemprompt-cloud"]

# Test utilities (credential fixtures, etc.)
test-utils = ["cloud"]

# CLI entry point for product binaries (standalone, use 'full' for everything)
cli = ["dep:systemprompt-cli"]

# Runtime builder for embedding systemprompt as a library
runtime = ["cli", "dep:systemprompt-extension"]

# Full functionality including all domain modules and CLI
full = [
    "api",
    "mcp",
    "sync",
    "cloud",
    "cli",
    "dep:systemprompt-agent",
    "dep:systemprompt-ai",
    "dep:systemprompt-mcp",
    "dep:systemprompt-oauth",
    "dep:systemprompt-users",
    "dep:systemprompt-content",
    "dep:systemprompt-analytics",
    "dep:systemprompt-scheduler",
    "dep:systemprompt-logging",
    "dep:systemprompt-config",
    "dep:systemprompt-files",
    # Infrastructure crates for extension authors
    "dep:systemprompt-loader",
    "dep:systemprompt-events",
    "dep:systemprompt-client",
    "dep:systemprompt-security",
]

[dependencies]
# Core shared crates
systemprompt-traits = { version = "0.0.3", path = "../crates/shared/traits", optional = true }
systemprompt-models = { version = "0.0.3", path = "../crates/shared/models", optional = true }
systemprompt-identifiers = { version = "0.0.3", path = "../crates/shared/identifiers", optional = true }
systemprompt-extension = { version = "0.0.3", path = "../crates/shared/extension", optional = true }
systemprompt-template-provider = { version = "0.0.3", path = "../crates/shared/template-provider", optional = true }

# Infrastructure
systemprompt-database = { version = "0.0.3", path = "../crates/infra/database", optional = true }
systemprompt-logging = { version = "0.0.3", path = "../crates/infra/logging", optional = true }
systemprompt-config = { version = "0.0.3", path = "../crates/infra/config", optional = true }
systemprompt-cloud = { version = "0.0.3", path = "../crates/infra/cloud", optional = true }
systemprompt-loader = { version = "0.0.3", path = "../crates/infra/loader", optional = true }
systemprompt-events = { version = "0.0.3", path = "../crates/infra/events", optional = true }
systemprompt-client = { version = "0.0.3", path = "../crates/shared/client", optional = true }
systemprompt-security = { version = "0.0.3", path = "../crates/infra/security", optional = true }

# Application
systemprompt-sync = { version = "0.0.3", path = "../crates/app/sync", optional = true }
systemprompt-runtime = { version = "0.0.3", path = "../crates/app/runtime", optional = true }

# Entry points
systemprompt-api = { version = "0.0.3", path = "../crates/entry/api", optional = true }
systemprompt-cli = { version = "0.0.3", path = "../crates/entry/cli", optional = true }

# Domain crates
systemprompt-agent = { version = "0.0.3", path = "../crates/domain/agent", optional = true }
systemprompt-ai = { version = "0.0.3", path = "../crates/domain/ai", optional = true }
systemprompt-mcp = { version = "0.0.3", path = "../crates/domain/mcp", optional = true }
systemprompt-oauth = { version = "0.0.3", path = "../crates/domain/oauth", optional = true }
systemprompt-users = { version = "0.0.3", path = "../crates/domain/users", optional = true }
systemprompt-content = { version = "0.0.3", path = "../crates/domain/content", optional = true }
systemprompt-analytics = { version = "0.0.3", path = "../crates/domain/analytics", optional = true }
systemprompt-scheduler = { version = "0.0.3", path = "../crates/app/scheduler", optional = true }
systemprompt-files = { version = "0.0.3", path = "../crates/domain/files", optional = true }

# External dependencies for prelude re-exports
axum = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }

# Error handling and utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
