# Test Workspace
#
# This is a separate workspace for all test crates. It's excluded from the main
# workspace so that tests don't compile when systemprompt-core is used as a
# git dependency.
#
# Run tests: cargo test --manifest-path crates/tests/Cargo.toml --workspace
# Coverage:  cargo llvm-cov --manifest-path crates/tests/Cargo.toml --workspace

[workspace]
members = [
    # Integration tests
    "integration/extension",
    # Unit tests - shared layer
    "unit/shared/traits",
    "unit/shared/models",
    "unit/shared/client",
    "unit/shared/identifiers",
    # Unit tests - infra layer
    "unit/infra/cloud",
    "unit/infra/config",
    "unit/infra/database",
    "unit/infra/loader",
    "unit/infra/logging",
    # Unit tests - domain layer
    "unit/domain/agent",
    "unit/domain/ai",
    "unit/domain/analytics",
    "unit/domain/content",
    "unit/domain/files",
    "unit/domain/mcp",
    "unit/domain/oauth",
    "unit/domain/users",
    # Unit tests - app layer
    "unit/app/generator",
    "unit/app/runtime",
    # Unit tests - entry layer
    "unit/entry/api",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Edward Burton"]
license = "BSL-1.0"
version = "0.0.3"
publish = false

# Relaxed linting for tests
[workspace.lints.clippy]
expect_used = "allow"
unwrap_used = "allow"
panic = "allow"
needless_pass_by_value = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
# Core dependencies - match main workspace versions
tokio = { version = "1.47", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros", "fs", "process", "signal", "test-util"] }
tokio-test = "0.4"
axum-test = "15.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "rust_decimal"] }
rust_decimal = "1.37"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }
regex = "1.11"
indexmap = { version = "2.0", features = ["serde"] }

# HTTP/API
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
http = "1.0"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tower = { version = "0.5", features = ["util"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
console = "0.15"
dialoguer = "0.11"

# Utilities
inventory = "0.3"
dotenvy = "0.15"
tempfile = "3.0"
walkdir = "2.0"
config = { version = "0.14", features = ["yaml"] }
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1.0"
schemars = { version = "1.0", features = ["derive"] }
once_cell = "1.21"
url = "2.5"
semver = { version = "1.0", features = ["serde"] }

# MCP
rmcp = { version = "0.12.0", features = ["server", "client", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "macros", "auth"] }

# Security
rand = "0.8"
bcrypt = "0.15"
base64 = "0.22"
jsonwebtoken = "9.3"
sha2 = "0.10"

# Testing utilities
wiremock = "0.6"

# Path dependencies to main crates (relative to crates/tests/)
systemprompt-traits = { path = "../shared/traits" }
systemprompt-models = { path = "../shared/models" }
systemprompt-client = { path = "../shared/client" }
systemprompt-identifiers = { path = "../shared/identifiers" }
systemprompt-extension = { path = "../shared/extension" }
systemprompt-database = { path = "../infra/database" }
systemprompt-logging = { path = "../infra/logging" }
systemprompt-config = { path = "../infra/config" }
systemprompt-events = { path = "../infra/events" }
systemprompt-security = { path = "../infra/security" }
systemprompt-cloud = { path = "../infra/cloud" }
systemprompt-loader = { path = "../infra/loader" }
systemprompt-users = { path = "../domain/users" }
systemprompt-oauth = { path = "../domain/oauth" }
systemprompt-files = { path = "../domain/files" }
systemprompt-analytics = { path = "../domain/analytics" }
systemprompt-content = { path = "../domain/content" }
systemprompt-mcp = { path = "../domain/mcp" }
systemprompt-ai = { path = "../domain/ai" }
systemprompt-agent = { path = "../domain/agent" }
systemprompt-runtime = { path = "../app/runtime" }
systemprompt-scheduler = { path = "../app/scheduler" }
systemprompt-generator = { path = "../app/generator" }
systemprompt-sync = { path = "../app/sync" }
systemprompt-api = { path = "../entry/api" }
systemprompt-tui = { path = "../entry/tui" }
systemprompt-cli = { path = "../entry/cli" }

# Testing utility
trybuild = "1.0"
