# Test Workspace
#
# This is a separate workspace for all test crates. It's excluded from the main
# workspace so that tests don't compile when systemprompt-core is used as a
# git dependency.
#
# Run tests: cargo test --manifest-path crates/tests/Cargo.toml --workspace
# Coverage:  cargo llvm-cov --manifest-path crates/tests/Cargo.toml --workspace

[workspace]
members = [
    # Integration tests
    "integration/extension",
    "integration/oauth",
    # Unit tests - shared layer
    "unit/shared/traits",
    "unit/shared/models",
    "unit/shared/client",
    "unit/shared/identifiers",
    # Unit tests - infra layer
    "unit/infra/cloud",
    "unit/infra/config",
    "unit/infra/database",
    "unit/infra/events",
    "unit/infra/loader",
    "unit/infra/logging",
    "unit/infra/security",
    # Unit tests - domain layer
    "unit/domain/agent",
    "unit/domain/ai",
    "unit/domain/analytics",
    "unit/domain/content",
    "unit/domain/files",
    "unit/domain/mcp",
    "unit/domain/oauth",
    "unit/domain/users",
    "unit/domain/templates",
    # Unit tests - app layer
    "unit/app/generator",
    "unit/app/runtime",
    # Unit tests - entry layer
    "unit/entry/api",
    "unit/entry/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Edward Burton"]
license = "BSL-1.0"
version = "0.0.9"
publish = false

# Relaxed linting for tests
[workspace.lints.clippy]
expect_used = "allow"
unwrap_used = "allow"
panic = "allow"
needless_pass_by_value = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
# Core dependencies - match main workspace versions
tokio = { version = "1.47", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros", "fs", "process", "signal", "test-util"] }
tokio-test = "0.4"
axum-test = "15.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "rust_decimal"] }
rust_decimal = "1.37"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }
regex = "1.11"
indexmap = { version = "2.0", features = ["serde"] }

# HTTP/API
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
http = "1.0"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tower = { version = "0.5", features = ["util"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
console = "0.15"
dialoguer = "0.11"

# Utilities
inventory = "0.3"
dotenvy = "0.15"
tempfile = "3.0"
walkdir = "2.0"
config = { version = "0.14", features = ["yaml"] }
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1.0"
schemars = { version = "1.0", features = ["derive"] }
once_cell = "1.21"
url = "2.5"
semver = { version = "1.0", features = ["serde"] }

# MCP
rmcp = { version = "0.12.0", features = ["server", "client", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "macros", "auth"] }

# Security
rand = "0.8"
bcrypt = "0.15"
base64 = "0.22"
jsonwebtoken = "9.3"
sha2 = "0.10"

# Testing utilities
wiremock = "0.6"

# Path dependencies to main crates (relative to crates/tests/)
systemprompt-traits = { path = "../shared/traits", version = "0.0.9" }
systemprompt-models = { path = "../shared/models", version = "0.0.9" }
systemprompt-client = { path = "../shared/client", version = "0.0.9" }
systemprompt-identifiers = { path = "../shared/identifiers", version = "0.0.9" }
systemprompt-extension = { path = "../shared/extension", version = "0.0.9" }
systemprompt-database = { path = "../infra/database", version = "0.0.9" }
systemprompt-logging = { path = "../infra/logging", version = "0.0.9" }
systemprompt-config = { path = "../infra/config", version = "0.0.9" }
systemprompt-events = { path = "../infra/events", version = "0.0.9" }
systemprompt-security = { path = "../infra/security", version = "0.0.9" }
systemprompt-cloud = { path = "../infra/cloud", version = "0.0.9" }
systemprompt-loader = { path = "../infra/loader", version = "0.0.9" }
systemprompt-users = { path = "../domain/users", version = "0.0.9" }
systemprompt-oauth = { path = "../domain/oauth", version = "0.0.9" }
systemprompt-files = { path = "../domain/files", version = "0.0.9" }
systemprompt-analytics = { path = "../domain/analytics", version = "0.0.9" }
systemprompt-content = { path = "../domain/content", version = "0.0.9" }
systemprompt-mcp = { path = "../domain/mcp", version = "0.0.9" }
systemprompt-ai = { path = "../domain/ai", version = "0.0.9" }
systemprompt-agent = { path = "../domain/agent", version = "0.0.9" }
systemprompt-templates = { path = "../domain/templates", version = "0.0.9" }
systemprompt-template-provider = { path = "../shared/template-provider", features = ["tokio"] }
systemprompt-runtime = { path = "../app/runtime", version = "0.0.9" }
systemprompt-scheduler = { path = "../app/scheduler", version = "0.0.9" }
systemprompt-generator = { path = "../app/generator", version = "0.0.9" }
systemprompt-sync = { path = "../app/sync", version = "0.0.9" }
systemprompt-api = { path = "../entry/api", version = "0.0.9" }
systemprompt-tui = { path = "../entry/tui", version = "0.0.9" }
systemprompt-cli = { path = "../entry/cli", version = "0.0.9" }

# Testing utility
trybuild = "1.0"
