[package]
name = "systemprompt-generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Static site generation for systemprompt.io"

[lints]
workspace = true

[dependencies]
# Shared layer
systemprompt-models = { path = "../../shared/models", version = "0.0.8" }
systemprompt-traits = { path = "../../shared/traits", version = "0.0.8" }
systemprompt-provider-contracts = { path = "../../shared/provider-contracts", version = "0.0.8" }
systemprompt-identifiers = { path = "../../shared/identifiers", version = "0.0.8" }

# Infrastructure layer
systemprompt-database = { path = "../../infra/database", version = "0.0.8" }
systemprompt-logging = { path = "../../infra/logging", version = "0.0.8" }
systemprompt-config = { path = "../../infra/config", version = "0.0.8" }
systemprompt-cloud = { path = "../../infra/cloud", version = "0.0.8" }

# Domain layer (read-only access for content types)
systemprompt-content = { path = "../../domain/content", version = "0.0.8" }
systemprompt-files = { path = "../../domain/files", version = "0.0.8" }
systemprompt-templates = { path = "../../domain/templates", version = "0.0.8" }

# Template provider traits
systemprompt-template-provider = { path = "../../shared/template-provider", version = "0.0.8" }

# Extension system
systemprompt-extension = { path = "../../shared/extension", version = "0.0.8" }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Logging
tracing = { workspace = true }

# Template engine
handlebars = { workspace = true }

# Markdown processing
pulldown-cmark = { workspace = true }
comrak = { workspace = true }

# XML generation (sitemap)
quick-xml = { version = "0.31", features = ["serialize"] }

# Progress indication
indicatif = { workspace = true }

# File utilities
walkdir = { workspace = true }

# Image processing (WebP conversion)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

# HTTP client
reqwest = { workspace = true }

# Chrono for dates
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# URL handling
url = { workspace = true }
urlencoding = { workspace = true }

# Random
rand = { workspace = true }

# Hashing
sha2 = { workspace = true }
hex = { workspace = true }

# Job registration
inventory = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
