[package]
name = "systemprompt-generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Static site generation for systemprompt.io"

[lints]
workspace = true

[dependencies]
# Shared layer
systemprompt-models = { workspace = true }
systemprompt-traits = { workspace = true }
systemprompt-provider-contracts = { workspace = true }
systemprompt-identifiers = { workspace = true }

# Infrastructure layer
systemprompt-database = { workspace = true }
systemprompt-logging = { workspace = true }
systemprompt-config = { workspace = true }
systemprompt-cloud = { workspace = true }

# Domain layer (read-only access for content types)
systemprompt-content = { workspace = true }
systemprompt-files = { workspace = true }
systemprompt-templates = { workspace = true }

# Template provider traits
systemprompt-template-provider = { workspace = true }

# Extension system
systemprompt-extension = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Logging
tracing = { workspace = true }

# Template engine
handlebars = { workspace = true }

# Markdown processing
pulldown-cmark = { workspace = true }
comrak = { workspace = true }

# Regex for heading ID injection
regex = { workspace = true }

# XML generation (sitemap)
quick-xml = { version = "0.31", features = ["serialize"] }

# Progress indication
indicatif = { workspace = true }

# File utilities
walkdir = { workspace = true }

# Image processing (WebP conversion)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

# HTTP client
reqwest = { workspace = true }

# Chrono for dates
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# URL handling
url = { workspace = true }
urlencoding = { workspace = true }

# Random
rand = { workspace = true }

# Hashing
sha2 = { workspace = true }
hex = { workspace = true }

# Job registration
inventory = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
