[package]
name = "systemprompt-generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Static site generation, theme rendering, and asset bundling for systemprompt.io AI governance dashboards. Handlebars and Markdown pipeline for the MCP governance platform."
readme = "README.md"

[lints]
workspace = true

[dependencies]
# Shared layer
systemprompt-models = { workspace = true }
systemprompt-traits = { workspace = true }
systemprompt-provider-contracts = { workspace = true }
systemprompt-identifiers = { workspace = true }

# Infrastructure layer
systemprompt-database = { workspace = true }

# Domain layer (read-only access for content types)
systemprompt-content = { workspace = true }
systemprompt-templates = { workspace = true }

# Template provider traits
systemprompt-template-provider = { workspace = true }

# Extension system
systemprompt-extension = { workspace = true }

# App layer (sync)

# Async runtime
tokio = { workspace = true, features = ["fs"] }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Logging
tracing = { workspace = true }

# Template engine

# Markdown processing
comrak = { workspace = true }

# XML generation (sitemap)
quick-xml = { workspace = true }

# Progress indication
indicatif = { workspace = true }

# File utilities

# Image processing (WebP conversion)
image = { workspace = true, optional = true }

# HTTP client

# Chrono for dates
chrono = { workspace = true }

# UUID

# URL handling

# Random

# Hashing

# Job registration
inventory = { workspace = true }
async-trait = { workspace = true }

[features]
default = []
image-processing = ["dep:image"]

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.cargo-machete]
# image: used only under the image-processing feature / inventory: compile-time registration via register_extension!/submit_* macros (::inventory::submit!)
ignored = ["image", "inventory"]
