[package]
name = "systemprompt-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Application runtime context and module registry for systemprompt.io"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
axum = { workspace = true }
maxminddb = { workspace = true }
systemprompt-models = { workspace = true }
systemprompt-traits = { workspace = true }
systemprompt-extension = { workspace = true }
systemprompt-identifiers = { workspace = true }
systemprompt-database = { workspace = true }
systemprompt-logging = { workspace = true }
systemprompt-config = { workspace = true }
systemprompt-loader = { workspace = true }
systemprompt-analytics = { workspace = true }
systemprompt-files = { workspace = true }
systemprompt-users = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
